# vdrm2

./: .gitignore
chips/: chips.txt
dsview/: 260314-1125fps.dsl  260314-234940-5000fps.dsl  260315-121735-led_ch8.dsl  cmds.csv  decoder--241212-173915.csv  decoder--umini-full-gray-rgb.csv
dsview/decoder/: cmd_seq.txt  cmds.txt  cmds2.txt
dsview/decoder/src/: main.rs
dsview/mbi5264/: pd.py
foc/lolin_d32/: platformio.ini
foc/lolin_d32/src/: main.cpp
foc/pico/: flash.sh  platformio.ini
foc/pico/src/: main.cpp
mbi5264/: Cargo.toml  Embed.toml  attach.sh  build.rs  build.sh  flash_img.sh
mbi5264-common/: Cargo.toml
mbi5264-common/src/: lib.rs
mbi5264-host/: Cargo.toml
mbi5264-host/src/: main.rs  mbi5264.rs
mbi5264/.cargo/: config.toml
mbi5264/.zed/: settings.json
mbi5264/hdl/: decoder.v  hc595.v  led.ucf  main.v
mbi5264/src/: clocks.rs  clocks2.rs  consts.rs  core1.rs  encoder.rs  env.rs  main copy.rs  main.rs
usb-host/: Cargo.toml
usb-host/src/: main.rs  usb.rs
