[package]
name = "vdrm-pico"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1"
embedded-hal = "1.0.0"
pio = "0.2.1"
pio-proc = "0.2.2"
mbi5264-common = { path = "../mbi5264-common" }
embassy-embedded-hal = { version = "0.3.0", features = [] }
embassy-sync = { version = "0.6.1", features = [] }
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.4.0", features = [] }
embassy-rp = { version = "0.3.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-usb = { version = "0.4.0", features = [] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.4.0" }

fixed = "1.23.1"
fixed-macro = "1.2"

# defmt = "0.3"
# defmt-rtt = { version = "0.4", features = ["disable-blocking-mode"] }
log = "0.4"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
qoi = { version = "0.4.1", default_features = false }
byteorder = { version = "1.5.0", default-features = false }
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"

[build-dependencies]
# vdrm-alg = { path = "/Users/hikari/rust/vdrm/vdrm-alg/" }
vdrm-alg = { git = "https://github.com/hikaricai/vdrm.git", package = "vdrm-alg", branch = "master" }
mbi5264-common = { path = "../mbi5264-common" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.dev]
debug = 2
lto = true
# opt-level = "2"
